[gd_scene format=3 uid="uid://xwc4sjwi65t"]

[ext_resource type="Script" uid="uid://beednkkrc1u31" path="res://Scripts/Battle_Sim/battle_sim.gd" id="1_kogdo"]
[ext_resource type="Script" uid="uid://ov1lqiycpbg4" path="res://Scripts/Battle_Sim/decks.gd" id="2_ti0s5"]
[ext_resource type="Script" uid="uid://dbxpl2ovqrn68" path="res://Scripts/Battle_Sim/Enemy.gd" id="3_7ul7h"]
[ext_resource type="Script" uid="uid://c0sag5c1lngk" path="res://Scripts/UI/Battle_Sim/UI.gd" id="5_ppjxe"]
[ext_resource type="PackedScene" uid="uid://bp847kvytvbu6" path="res://Scenes/Battle/battle_rewards.tscn" id="9_326y0"]
[ext_resource type="Script" uid="uid://cgkxegxldb101" path="res://Scripts/Battle_Sim/SkillManager.gd" id="9_wyqok"]
[ext_resource type="PackedScene" uid="uid://dluppe6lcdir0" path="res://Scenes/UI/Player/consumable_manager.tscn" id="10_1g37w"]
[ext_resource type="AudioStream" uid="uid://cxtsqm0vys3fa" path="res://Resources/Sound/Background/BattleBackground.wav" id="10_pbym1"]
[ext_resource type="Script" uid="uid://j36aoncuwt8h" path="res://Scripts/Battle_Sim/Battle.gd" id="12_05066"]
[ext_resource type="Script" uid="uid://ddglqu7gnlvwk" path="res://Scripts/Battle_Sim/NextTurn.gd" id="13_gppgb"]
[ext_resource type="Script" uid="uid://bh6nuqw7ax3wf" path="res://Scripts/Battle_Sim/button_controller.gd" id="15_mckkd"]
[ext_resource type="Script" uid="uid://dh4fwgqkdmhgc" path="res://Scripts/UI/Battle_Sim/interupt_ui.gd" id="16_juoq6"]
[ext_resource type="Script" uid="uid://cj5mdiosnctnu" path="res://Scripts/Battle_Sim/CardTransform.gd" id="17_2744l"]
[ext_resource type="Texture2D" uid="uid://c12wp1wrs4gke" path="res://Resources/Art/UIElements/checkbox_is_checked.png" id="17_qbs3y"]
[ext_resource type="Texture2D" uid="uid://c7ve57560id0r" path="res://Resources/Art/UIElements/checkbox_not_checked.png" id="18_wyqok"]

[sub_resource type="AtlasTexture" id="AtlasTexture_02f8f"]

[node name="BattleSim" type="Node2D" unique_id=1025432395 groups=["current scene"]]
script = ExtResource("1_kogdo")

[node name="player_deck" type="Node2D" parent="." unique_id=463905198 groups=["player deck"]]
script = ExtResource("2_ti0s5")

[node name="Enemy" type="Node2D" parent="." unique_id=532331475 groups=["enemy deck"]]
script = ExtResource("3_7ul7h")

[node name="BattleRewards" parent="." unique_id=674275797 instance=ExtResource("9_326y0")]
visible = false

[node name="ConsumableManger" parent="." unique_id=87852657 instance=ExtResource("10_1g37w")]

[node name="SkillManager" type="Node2D" parent="." unique_id=1084665185]
script = ExtResource("9_wyqok")

[node name="NextTurn" type="Node2D" parent="." unique_id=1491844787]
script = ExtResource("13_gppgb")

[node name="Battle" type="Node2D" parent="." unique_id=1932347261 groups=["battle sim"]]
visible = false
script = ExtResource("12_05066")

[node name="UI" type="Control" parent="." unique_id=1184303685]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_ppjxe")

[node name="ColorRect" type="ColorRect" parent="UI" unique_id=977675943]
visible = false
layout_mode = 0
offset_left = 1526.0
offset_top = 771.0
offset_right = 1914.0
offset_bottom = 1015.0
color = Color(0.254902, 0.254902, 0.254902, 0.752941)

[node name="RichTextLabel" type="RichTextLabel" parent="UI/ColorRect" unique_id=1611086266]
layout_mode = 0
offset_left = 13.0
offset_top = 10.0
offset_right = 374.0
offset_bottom = 233.0
focus_mode = 2
bbcode_enabled = true
selection_enabled = true

[node name="Labels" type="Control" parent="UI" unique_id=1319104688]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerDamageNumber" type="Label" parent="UI/Labels" unique_id=877019242]
layout_mode = 0
offset_left = 1792.0
offset_top = 193.0
offset_right = 1832.0
offset_bottom = 239.0
theme_override_font_sizes/font_size = 33

[node name="EnemyDamageNumber" type="Label" parent="UI/Labels" unique_id=1034577393]
layout_mode = 0
offset_left = 1774.0
offset_top = 880.0
offset_right = 1814.0
offset_bottom = 926.0
theme_override_font_sizes/font_size = 33

[node name="EnemyBleedTaken" type="Label" parent="UI/Labels" unique_id=100812803]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.652057, 0.0009675, 0.000530305, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="EnemyBleedDrip" type="Label" parent="UI/Labels/EnemyBleedTaken" unique_id=1645946686]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.652057, 0.0009675, 0.000530305, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="PlayerBleedTaken" type="Label" parent="UI/Labels" unique_id=1963020908]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.652057, 0.0009675, 0.000530305, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="PlayerBleedDrip" type="Label" parent="UI/Labels/PlayerBleedTaken" unique_id=685121543]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.652057, 0.0009675, 0.000530305, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="PlayerHealNumber" type="Label" parent="UI/Labels" unique_id=1555525133]
layout_mode = 0
offset_left = 1792.0
offset_top = 193.0
offset_right = 1832.0
offset_bottom = 239.0
theme_override_colors/font_color = Color(0, 0.643698, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 33

[node name="EnemyHealNumber" type="Label" parent="UI/Labels" unique_id=618354672]
layout_mode = 0
offset_left = 1792.0
offset_top = 193.0
offset_right = 1832.0
offset_bottom = 239.0
theme_override_colors/font_color = Color(0, 0.643698, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 33

[node name="PlayerReflectNumber" type="Label" parent="UI/Labels" unique_id=738916914]
layout_mode = 0
offset_left = 1792.0
offset_top = 193.0
offset_right = 1832.0
offset_bottom = 239.0
theme_override_colors/font_color = Color(0.67451, 0.364706, 0.156863, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 33

[node name="EnemyReflectNumber" type="Label" parent="UI/Labels" unique_id=1011631954]
layout_mode = 0
offset_left = 1792.0
offset_top = 193.0
offset_right = 1832.0
offset_bottom = 239.0
theme_override_colors/font_color = Color(0.67451, 0.364706, 0.156863, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 33

[node name="Rounds" type="Label" parent="UI/Labels" unique_id=15842310]
layout_mode = 0
offset_left = 27.0
offset_top = 42.0
offset_right = 123.0
offset_bottom = 58.0
text = "Round: 1"

[node name="EnemyBurnTaken" type="Label" parent="UI/Labels" unique_id=1831482830]
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0.920566, 0.37126, 0.203271, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="EnemyBurnt" type="Label" parent="UI/Labels/EnemyBurnTaken" unique_id=242581448]
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0.920566, 0.37126, 0.203271, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="PlayerBurnTaken" type="Label" parent="UI/Labels" unique_id=1808038263]
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0.920566, 0.37126, 0.203271, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="PlayerBurnt" type="Label" parent="UI/Labels/PlayerBurnTaken" unique_id=1052634749]
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0.920566, 0.37126, 0.203271, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="EnemyPoisonTaken" type="Label" parent="UI/Labels" unique_id=130002235]
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0, 0.431357, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="EnemyDose" type="Label" parent="UI/Labels/EnemyPoisonTaken" unique_id=2117249303]
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0, 0.431357, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="PlayerPoisonTaken" type="Label" parent="UI/Labels" unique_id=1756202825]
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0, 0.431357, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="PlayerDose" type="Label" parent="UI/Labels/PlayerPoisonTaken" unique_id=578697551]
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0, 0.431357, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=1854936003]
stream = ExtResource("10_pbym1")
volume_db = -80.0
autoplay = true

[node name="AnimationTimer" type="Timer" parent="." unique_id=284579919]
wait_time = 0.6
autostart = true

[node name="TooltipTimer" type="Timer" parent="." unique_id=652552976]

[node name="CardTransform" type="Node" parent="." unique_id=933827587 groups=["card transform"]]
script = ExtResource("17_2744l")

[node name="PlayOrder" type="Timer" parent="." unique_id=288780830]
wait_time = 0.3

[node name="InteruptUI" type="Control" parent="." unique_id=957415517]
layout_mode = 3
anchors_preset = 0
offset_left = 784.0
offset_top = 502.0
offset_right = 1191.0
offset_bottom = 599.0
script = ExtResource("16_juoq6")

[node name="HBox" type="HBoxContainer" parent="InteruptUI" unique_id=1805894656]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
offset_right = 407.0
offset_bottom = 54.0
size_flags_vertical = 4
alignment = 1

[node name="CheckBox" type="CheckBox" parent="InteruptUI/HBox" unique_id=1059992189]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_icons/icon = SubResource("AtlasTexture_02f8f")
theme_override_icons/checked = ExtResource("17_qbs3y")
theme_override_icons/unchecked = ExtResource("18_wyqok")

[node name="CheckBox2" type="CheckBox" parent="InteruptUI/HBox" unique_id=363632864]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_icons/checked = ExtResource("17_qbs3y")
theme_override_icons/unchecked = ExtResource("18_wyqok")

[node name="CheckBox3" type="CheckBox" parent="InteruptUI/HBox" unique_id=404396484]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_icons/checked = ExtResource("17_qbs3y")
theme_override_icons/unchecked = ExtResource("18_wyqok")

[node name="CheckBox4" type="CheckBox" parent="InteruptUI/HBox" unique_id=1401209194]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_icons/checked = ExtResource("17_qbs3y")
theme_override_icons/unchecked = ExtResource("18_wyqok")

[node name="CheckBox5" type="CheckBox" parent="InteruptUI/HBox" unique_id=12596064]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_icons/checked = ExtResource("17_qbs3y")
theme_override_icons/unchecked = ExtResource("18_wyqok")

[node name="CheckBox6" type="CheckBox" parent="InteruptUI/HBox" unique_id=1199094869]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_icons/checked = ExtResource("17_qbs3y")
theme_override_icons/unchecked = ExtResource("18_wyqok")

[node name="CheckBox7" type="CheckBox" parent="InteruptUI/HBox" unique_id=333724326]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_icons/checked = ExtResource("17_qbs3y")
theme_override_icons/unchecked = ExtResource("18_wyqok")

[node name="MasterToggle" type="CheckBox" parent="InteruptUI" unique_id=2108516603]
layout_mode = 0
offset_left = -63.0
offset_right = -4.0
offset_bottom = 54.0
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_icons/icon = SubResource("AtlasTexture_02f8f")
theme_override_icons/checked = ExtResource("17_qbs3y")
theme_override_icons/unchecked = ExtResource("18_wyqok")

[node name="ButtonController" type="Control" parent="." unique_id=1371352193]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("15_mckkd")

[node name="InteruptContinueButton" type="Button" parent="ButtonController" unique_id=417667483]
layout_mode = 0
offset_left = 1746.0
offset_top = 551.0
offset_right = 1882.0
offset_bottom = 575.0
text = "Interupt"

[node name="StartButton" type="Button" parent="ButtonController" unique_id=1807994628]
layout_mode = 0
offset_left = 1778.0
offset_top = 588.0
offset_right = 1866.0
offset_bottom = 612.0
text = "Start"

[node name="ContinueButton" type="Button" parent="ButtonController" unique_id=1262046344]
layout_mode = 0
offset_left = 1754.0
offset_top = 619.0
offset_right = 1890.0
offset_bottom = 643.0
text = "Continue"

[connection signal="timeout" from="AnimationTimer" to="." method="_on_timer_timeout"]
[connection signal="toggled" from="InteruptUI/HBox/CheckBox" to="InteruptUI" method="_on_check_box_toggled"]
[connection signal="toggled" from="InteruptUI/HBox/CheckBox2" to="InteruptUI" method="_on_check_box_2_toggled"]
[connection signal="toggled" from="InteruptUI/HBox/CheckBox3" to="InteruptUI" method="_on_check_box_3_toggled"]
[connection signal="toggled" from="InteruptUI/HBox/CheckBox4" to="InteruptUI" method="_on_check_box_4_toggled"]
[connection signal="toggled" from="InteruptUI/HBox/CheckBox5" to="InteruptUI" method="_on_check_box_5_toggled"]
[connection signal="toggled" from="InteruptUI/HBox/CheckBox6" to="InteruptUI" method="_on_check_box_6_toggled"]
[connection signal="toggled" from="InteruptUI/HBox/CheckBox7" to="InteruptUI" method="_on_check_box_7_toggled"]
[connection signal="toggled" from="InteruptUI/MasterToggle" to="InteruptUI" method="_on_master_toggle_toggled"]
[connection signal="pressed" from="ButtonController/InteruptContinueButton" to="Battle" method="_on_interupt_continue_button_pressed"]
[connection signal="button_down" from="ButtonController/StartButton" to="Battle" method="_on_start_button_button_down"]
[connection signal="button_down" from="ButtonController/ContinueButton" to="Battle" method="_on_continue_button_button_down"]
